--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,6 +13,9 @@ ul.top-nav {
   padding: 0;
   overflow: hidden;
   background-color: #FFFFFF;
+  border-bottom: 1px solid #9FA3A3;
+
+
 }
 
 ul.top-nav li{
@@ -76,3 +79,40 @@ ul.top-nav li.top-nav-tweet-btn {float: right;}
     ul.topnav li.top-nav-tweet-btn,
     ul.topnav li {float: none;}
 }
+
+div.news-feed {
+  margin-top: 10px;
+  right: 2px;
+  display: block;
+  position: relative;
+  float: right;
+  width: 485px;
+  min-height: 600px;
+  border-radius: 5px;
+  background-color: #f5f8fa;
+}
+
+div.home-tweetbox {
+  background-color: #EFFAFA;
+}
+
+div.home-tweetbox input {
+  width: 80%;
+  padding: 5px;
+  height: 15px;
+  margin-top: 18px;
+  margin-left: 50px;
+  position: relative;
+  font-size: 14px;
+  border-radius: 5px;
+  border: #4AB3F4 solid 1px;
+  margin-bottom: 4px;
+}
+
+div.dashboard {
+  float: left;
+  width: 290px;
+  margin-left: 5px;
+}
+
+section.news-f
