responsive page/navbar

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,7 +13,7 @@ ul.top-nav {
   padding: 0;
   overflow: hidden;
   background-color: #FFFFFF;
-  border-bottom: 1px solid #9FA3A3;
+  border-bottom: 1px solid #CED5D5;
 
 
 }
@@ -27,11 +27,17 @@ ul.top-nav li a {
    display: block;
    color: white;
    text-align: center;
-   padding: 20px 18px;
+   padding: 14.5px 20px;
    text-decoration: none;
 }
+ul.top-nav li a text {
+  font-family: sans-serif;
+  color: #444242;
+  float: right;
+  padding-left: 5px;
+}
 
-ul.top-nav li button {
+ul.top-nav li.top-nav-tweet-btn button {
     background-color: #4AB3F4;
     border-radius: 100px;
     border: none;
@@ -49,18 +55,35 @@ ul.top-nav li button {
     margin-top: 15px;
 }
 
-ul.top-nav li input {
-  width: 100px;
-  padding: 4px;
+ul.top-nav li.top-nav-profile-btn button {
+    background-color: #FFFFFF;
+    border-radius: 100px;
+    border: none;
+    box-shadow: none;
+    cursor: pointer;
+    font-weight: bold;
+    line-height: 20px;
+    padding: 6px 16px;
+    position: relative;
+    text-align: center;
+    white-space: nowrap;
+    margin-right: 10px;
+    margin-top: 15px;
+}
+
+ul.top-nav li.search input.form-control-nav {
+  width: auto;
+  padding: 5px;
   height: 15px;
   margin-top: 18px;
   position: relative;
   font-size: 14px;
+  background-color: #e6ecf0;
   background-image: url("img/searchicon.png");
   background-repeat: no-repeat;
   background-position: right;
 	border-radius: 15px;
-  border: #4AB3F4 solid 2px;
+  border: #e6ecf0 solid 0.2px;
 }
 
 ul.top-nav li a:hover.home {border-bottom: 2px solid #4AB3F4;}
@@ -73,11 +96,18 @@ ul.top-nav li a:hover.moments {border-bottom: 2px solid #4AB3F4;}
 
 ul.top-nav li.top-nav-tweet-btn {float: right;}
 
+ul.top-nav li.top-nav-profile-btn {float: right;}
+
+ul.top-nav li.search {float: right;}
 
 
 @media screen and (max-width: 600px) {
-    ul.topnav li.top-nav-tweet-btn,
-    ul.topnav li {float: none;}
+    ul.top-nav li.top-nav-profile-btn { display: none;}
+    ul.top-nav li a text { display: none; }
+    ul.top-nav li.search { display: none; }
+    ul.top-nav li.top-nav-tweet-btn { display: none; }
+    ul.top-nav li { float: none;}
+
 }
 
 div.news-feed {
@@ -85,23 +115,26 @@ div.news-feed {
   right: 2px;
   display: block;
   position: relative;
-  float: right;
+  /*float: right;*/
   width: 485px;
   min-height: 600px;
   border-radius: 5px;
   background-color: #f5f8fa;
+  border-bottom: 1px solid #CED5D5;
 }
 
 div.home-tweetbox {
   background-color: #EFFAFA;
+  padding: 5px 5px;
+  border-bottom: 1px solid #CED5D5;
 }
 
 div.home-tweetbox input {
   width: 80%;
-  padding: 5px;
+  padding: 5px 5px;
   height: 15px;
-  margin-top: 18px;
-  margin-left: 50px;
+  margin-top: 5px;
+  margin-left: 75px;
   position: relative;
   font-size: 14px;
   border-radius: 5px;
@@ -115,4 +148,7 @@ div.dashboard {
   margin-left: 5px;
 }
 
-section.news-f
+div.news-feed {
+  float: right;
+
+}
